[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resource/Sprite2D/Car/CarV4.png" type="Texture2D" id=1]
[ext_resource path="res://Script/Car.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 7, 13 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
size = Vector2( 38, 128 )

[node name="Car" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast3D" type="Node2D" parent="."]

[node name="Top" type="RayCast2D" parent="RayCast3D"]
rotation = 3.14159
enabled = true
target_position = Vector2( -2.7887e-05, 11 )
collision_mask = 12

[node name="Right" type="RayCast2D" parent="RayCast3D"]
rotation = -1.5708
enabled = true
target_position = Vector2( -5.79198e-05, 16 )
collision_mask = 12

[node name="Bottom" type="RayCast2D" parent="RayCast3D"]
enabled = true
target_position = Vector2( 0, 13 )
collision_mask = 12

[node name="Left" type="RayCast2D" parent="RayCast3D"]
rotation = 1.5708
enabled = true
target_position = Vector2( 5.79198e-05, 16 )
collision_mask = 12

[node name="IfLeftWall" type="RayCast2D" parent="RayCast3D"]
rotation = 1.5708
enabled = true
target_position = Vector2( 0, 8 )
collision_mask = 4

[node name="IfRightWall" type="RayCast2D" parent="RayCast3D"]
rotation = -1.5708
enabled = true
target_position = Vector2( 0, 8 )
collision_mask = 4

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
current = true
limit_left = -20
limit_top = 0
limit_right = 115
limit_bottom = 240
editor_draw_limits = true

[node name="TouchControll" type="Node2D" parent="Camera2D"]

[node name="Right" type="TouchScreenButton" parent="Camera2D/TouchControll"]
position = Vector2( 56, 0 )
shape = SubResource( 2 )

[node name="Left" type="TouchScreenButton" parent="Camera2D/TouchControll"]
position = Vector2( -20, 0 )
shape = SubResource( 2 )
